added filtering from textbox and button

--- a/src/app/people/person-list.component.html
+++ b/src/app/people/person-list.component.html
@@ -6,10 +6,9 @@
   <div class="card-body">
 
     <div class="input-group">
-
-      <input type="text" class="form-control" placeholder="Person Name">
+      <input #filter type="text" class="form-control" placeholder="Person Name">
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button">Search</button>
+        <button class="btn btn-outline-secondary" type="button" (click)="search(filter.value)">Search</button>
       </div>
     </div>
 
