basic paging using action streams

--- a/src/app/people/person-list.component.html
+++ b/src/app/people/person-list.component.html
@@ -31,7 +31,15 @@
         </tbody>
       </table>
     </div>
-
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item"><a class="page-link" (click)="prev()">Previous</a></li>
+        <li class="page-item"><a class="page-link">1</a></li>
+        <li class="page-item"><a class="page-link">2</a></li>
+        <li class="page-item"><a class="page-link">3</a></li>
+        <li class="page-item"><a class="page-link" (click)="next()">Next</a></li>
+      </ul>
+    </nav>
   </div>
 </div>
 
