--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,12 @@
          routerLinkActive="active"
          [routerLinkActiveOptions]="{ exact : true}">People List</a>
     </li>
-
+    <li class="nav-item">
+      <a class="nav-link"
+         [routerLink]="['/favorites']"
+         routerLinkActive="active"
+         [routerLinkActiveOptions]="{ exact : true}">Favorites </a>
+    </li>
   </ul>
 </nav>
 
