--- a/src/app/favorites/favorite-list.component.html
+++ b/src/app/favorites/favorite-list.component.html
@@ -1,4 +1,4 @@
-<div class="card" *ngIf="favorites$ | async as favorites">
+<div class="card">
 	<div class="card-header">
 		{{pageTitle}}
 
@@ -6,28 +6,15 @@
 
 	</div>
 
-	<div class="card-body">
+	<div class="card-body" [sortablejs]="people" [sortablejsOptions]="eventOptions">
 
 
-		<div class="table-responsive">
-		  <table class="table mb-0">
-			<thead>
-			  <tr>
-				<th>Person</th>
-				<th>Birthday</th>
-				<th>Home World Name</th>
-			  </tr>
-			</thead>
-			<tbody *ngFor="let person of favorites">
-			  <tr>
-				<td>{{ person.name }}</td>
-				<td>{{ person.birth_year }}</td>
-				<td>{{ person.homeworld_name }}</td>
-
-			  </tr>
-			</tbody>
-		  </table>
+		<div class="draggable"
+			style="margin: 10px; padding: 10px; border-color: black"
+			*ngFor="let person of people; let idx = index">
+			 {{idx+1}} {{ person.name }}
 		</div>
+
 
 	  </div>
 
