--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,26 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
-  <a class="navbar-brand">{{pageTitle}}</a>
+  <a class="navbar-brand">
+    {{pageTitle}}
+  </a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link"
-         [routerLink]="['/welcome']"
-         routerLinkActive="active">Home</a>
+      <a class="nav-link" [routerLink]="['/welcome']" routerLinkActive="active">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link"
-         [routerLink]="['/people']"
-         routerLinkActive="active"
-         [routerLinkActiveOptions]="{ exact : true}">People List</a>
+      <a class="nav-link" [routerLink]="['/people']" routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact : true}">People</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link"
-         [routerLink]="['/favorites']"
-         routerLinkActive="active"
-         [routerLinkActiveOptions]="{ exact : true}">Favorites </a>
+      <a class="nav-link" [routerLink]="['/planets']" routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact : true}">
+        Planets
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/favorites']" routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact : true}">
+        Favorites
+      </a>
     </li>
   </ul>
 </nav>
