--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,12 @@
       </a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/starships']" routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact : true}">
+        Starships
+      </a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" [routerLink]="['/favorites']" routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact : true}">
         Favorites
