--- a/src/app/shared/pagination/pagination.component.html
+++ b/src/app/shared/pagination/pagination.component.html
@@ -1,3 +1,15 @@
-<p>
-	Pagination
-</p>
+<nav *ngIf="totalPages > 1" style="margin-top: 20px;">
+	<ul class="pagination">
+	  <li *ngIf="page > 1" class="page-item">
+		<a class="page-link" (click)="prev()">Previous</a>
+	  </li>
+	  <li [ngClass]="{'page-item' : true, 'active': i + 1 == page}" *ngFor="let item of [].constructor(totalPages); let i = index">
+		<a class="page-link" (click)="setPage(i+1)">
+		  {{ i + 1 }}
+		</a>
+	  </li>
+	  <li *ngIf="totalPages > page" class="page-item">
+		  <a class="page-link" (click)="next()">Next</a>
+	  </li>
+	</ul>
+  </nav>
