updated prefix to match starwars applicaiton

--- a/src/app/features/people/person-list.component.html
+++ b/src/app/features/people/person-list.component.html
@@ -44,7 +44,7 @@
       </table>
     </div>
 
-    <pm-pagination [page]="page" [totalPages]="people.pages" (pageChanged)="setPage($event)"></pm-pagination>
+    <sw-pagination [page]="page" [totalPages]="people.pages" (pageChanged)="setPage($event)"></sw-pagination>
 
   </div>
 </div>
