--- a/src/app/features/planets/planet-list.component.html
+++ b/src/app/features/planets/planet-list.component.html
@@ -42,7 +42,7 @@
     </div>
 
 
-    <pm-pagination [page]="page" [totalPages]="planets.pages" (pageChanged)="setPage($event)"></pm-pagination>
+    <sw-pagination [page]="page" [totalPages]="planets.pages" (pageChanged)="setPage($event)"></sw-pagination>
 
   </div>
 </div>
