--- a/src/app/features/starships/starship-list.component.html
+++ b/src/app/features/starships/starship-list.component.html
@@ -1,10 +1,10 @@
-<div class="card" *ngIf="starships$ | async as starships">
+<div class="card" *ngIf="vm$ | async as vm">
   <div class="card-header">
 
     {{ pageTitle }}
 
     <a style="float: right" [routerLink]="['/favorites']">
-      {{starships.totalFavorites}}
+      {{vm.starships.totalFavorites}}
     </a>
 
   </div>
@@ -28,7 +28,7 @@
             <th></th>
           </tr>
         </thead>
-        <tbody *ngFor="let starship of starships.results">
+        <tbody *ngFor="let starship of vm.starships.results">
           <tr>
             <td>{{ starship.name }}</td>
             <td>
