added settings feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,12 @@
         Favorites
       </a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/settings']" routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact : true}">
+        Settings
+      </a>
+    </li>
   </ul>
 </nav>
 
