--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,33 +4,56 @@
   </a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/welcome']" routerLinkActive="active">Home</a>
+      <a class="nav-link" [routerLink]="['/welcome']" routerLinkActive="active"
+        >Home</a
+      >
     </li>
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/people']" routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact : true}">People</a>
+      <a
+        class="nav-link"
+        [routerLink]="['/people']"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact : true}"
+        >People</a
+      >
     </li>
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/planets']" routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact : true}">
+      <a
+        class="nav-link"
+        [routerLink]="['/planets']"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact : true}"
+      >
         Planets
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/starships']" routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact : true}">
+      <a
+        class="nav-link"
+        [routerLink]="['/starships']"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact : true}"
+      >
         Starships
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/favorites']" routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact : true}">
+      <a
+        class="nav-link"
+        [routerLink]="['/favorites']"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact : true}"
+      >
         Favorites
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/settings']" routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact : true}">
+      <a
+        class="nav-link"
+        [routerLink]="['/settings']"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact : true}"
+      >
         Settings
       </a>
     </li>
